updated some backend calls, and worked a bit more on chatbot, still bugging a bit

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /node_modules
 /.pnp
 .pnp.js
+python/model_cache/
 
 # Testing
 /coverage
@@ -53,3 +54,5 @@ Desktop.ini
 # Next.js-specific (if applicable)
 .next
 .vercel
+
+**/model_cache/
