--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-torch==2.1.0+cpu
-transformers==4.36.2
 kittycad==0.7.4
 requests==2.31.0
-websockets>=14.1.0,<15.0.0
-pydantic==2.10.4
+python-dotenv==1.0.1
